# APT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  clean.sh  dgl_train_template.sh  exp_multinodes.sh  pre_process.sh  readme.MD  run.sh  train_configs.sh  train_template.sh
costmodel/epoch10/: dryrun_friendster_w4_metis_GAT.txt  dryrun_friendster_w4_metis_GCN.txt  dryrun_friendster_w4_metis_SAGE.txt  dryrun_igbfull_w4_metis_GAT.txt  dryrun_igbfull_w4_metis_GCN.txt  dryrun_igbfull_w4_metis_SAGE.txt  dryrun_papers_w4_metis_GAT.txt  dryrun_papers_w4_metis_GCN.txt  dryrun_papers_w4_metis_SAGE.txt
examples/: allreduce.py  conv.py  dgl_ddp.py  dgl_single_gpu.py  dryrun.py  gat_model.py  gcn_model.py  model.py  mp_runner.py  preprocess.py  readme.MD  run_multi_machine.sh  run_single_machine.sh  sage_model.py  train.py  train_copy.py  utils.py
examples/test_throughput/: test_gloo_multi_machine.py  test_nccl_multi_machine.py  test_nccl_single_machine.py
figure1/: mp_runner_hidden_dim.py  mp_runner_input_dim.py  plot.py  readme.MD  run.sh  run_hidden_dim.sh  run_input_dim.sh
figure6/: mp_runner_cache_mem.py  mp_runner_fanout.py  mp_runner_hidden_dim.py  plot.py  readme.MD  run.sh  run_cache_mem.sh  run_fanout.sh  run_hidden_dim.sh
figure7/: mp_runner.py  plot.py  readme.MD  run.sh
figure8/: mp_runner_gat.py  plot.py  readme.MD  run.sh
figure9/: mp_runner_random_partition.py  plot.py  readme.MD  run.sh
npc_dataset/friendster_w16_metis/: configs.json
npc_dataset/friendster_w16_random/: configs.json
npc_dataset/friendster_w32_metis/: configs.json
npc_dataset/friendster_w4_metis/: configs.json
npc_dataset/friendster_w4_random/: configs.json
npc_dataset/friendster_w8_metis/: configs.json
npc_dataset/friendster_w8_random/: configs.json
npc_dataset/igbfull_w16_metis/: configs.json
npc_dataset/igbfull_w16_random/: configs.json
npc_dataset/igbfull_w32_metis/: configs.json
npc_dataset/igbfull_w4_metis/: configs.json
npc_dataset/igbfull_w4_random/: configs.json
npc_dataset/igbfull_w8_metis/: configs.json
npc_dataset/igbfull_w8_random/: configs.json
npc_dataset/igblarge_w8_metis/: configs.json
npc_dataset/igblarge_w8_random/: configs.json
npc_dataset/papers_w16/: configs.json
npc_dataset/papers_w16_metis/: configs.json
npc_dataset/papers_w16_random/: configs.json
npc_dataset/papers_w16_rebla_0717/: configs.json
npc_dataset/papers_w16_rebla_0722/: configs.json
npc_dataset/papers_w32_metis/: configs.json
npc_dataset/papers_w4/: configs.json
npc_dataset/papers_w4_metis/: configs.json
npc_dataset/papers_w4_random/: configs.json
npc_dataset/papers_w4_rebla_0717/: configs.json
npc_dataset/papers_w4_rebla_0722/: configs.json
npc_dataset/papers_w8_metis/: configs.json
npc_dataset/papers_w8_random/: configs.json
npc_dataset/papers_w8_rebla_0717/: configs.json
npc_dataset/papers_w8_rebla_0722/: configs.json
npc_dataset/products_w16/: configs.json
npc_dataset/products_w32_metis/: configs.json
npc_dataset/products_w8/: configs.json
npc_dataset/rebla-papers_w8/: configs.json
npc_dataset/toy_graph/: configs.json
npc_dataset_acc/papers_w4_metis/: configs.json
npc_dataset_acc2/papers_w16_metis/: configs.json
npc_dataset_acc2/papers_w4_metis/: configs.json
outputs/accuracy/: GAT_DP_ogbn-products_8.txt  GAT_MP_ogbn-products_8.txt  GAT_NP_ogbn-products_8.txt  GAT_SP_ogbn-products_8.txt  GCN_DP_ogbn-products_8.txt  GCN_MP_ogbn-products_1.txt  GCN_MP_ogbn-products_2.txt  GCN_MP_ogbn-products_4.txt  GCN_MP_ogbn-products_8.txt  GCN_NP_ogbn-products_8.txt  GCN_SP_ogbn-products_8.txt  SAGE_DGL_ogbn-papers100M_16.txt  SAGE_DGL_ogbn-papers100M_16_hidden32.csv  SAGE_DGL_ogbn-papers100M_4.txt  SAGE_DGL_ogbn-papers100M_8_hidden32.csv  SAGE_DP_ogbn-papers100M_16.txt  SAGE_DP_ogbn-papers100M_4.txt  SAGE_DP_ogbn-products_8.txt  SAGE_MP_ogbn-papers100M_16.txt  SAGE_MP_ogbn-papers100M_4.txt  SAGE_MP_ogbn-products_8.txt  SAGE_NP_ogbn-papers100M_16.txt  SAGE_NP_ogbn-papers100M_4.txt  SAGE_NP_ogbn-products_8.txt  SAGE_SP_ogbn-papers100M_16.txt  SAGE_SP_ogbn-papers100M_4.txt  SAGE_SP_ogbn-products_8.txt
python/: setup.py
scripts/: analysis_costmodel.py  draw.py  draw_utils.py  dryrun.py  load_data.py  prepare_data.py  preprocess_dataset.py
src/: cache_feats.cc  cache_feats.h  cache_graphs.cc  cache_graphs.h  core.cc  core.h  feat_shuffle.cc  feat_shuffle.h  load_subtensor.cc  load_subtensor.h  pybind.cc  relabel.cc  relabel.h  sampling.cc  sampling.h  sddmm.cc  sddmm.h  spmm.cc  spmm.h  state.h  utils.h
tests/: test_allbroadcast.cc  test_allgather.cc  test_allreduce.cc  test_alltoall.cc  test_sample_shuffle.cc  test_shuffle_seeds.cc  test_spmm.cc  unittest_main.cc
(+59 files in other folders)
